<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/header"
    android:background="@color/design_default_color_primary"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="12dp"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/username_display"
            android:textColor="@color/design_default_color_on_primary"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Logged in: username"/>
        <View android:layout_weight="1" android:layout_height="0dp" android:layout_width="0dp"/>
        <Button
            android:id="@+id/logout_button"
            android:text="@string/logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/balance_display"
            android:textColor="@color/design_default_color_on_primary"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Balance: $100"/>
        <View android:layout_weight="1" android:layout_height="0dp" android:layout_width="0dp"/>
        <Button
            android:id="@+id/cart_button"
            android:text="@string/view_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/rename_account_button"
            android:text="@string/rename_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
                    <View android:layout_weight="1" android:layout_height="0dp" android:layout_width="0dp"/>

        <Button
            android:id="@+id/delete_account_button"
            android:text="@string/delete_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>
